--- a/templates/login.html
+++ b/templates/login.html
@@ -1,8 +1,7 @@
-<!-- register.html -->
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html>
 <head>
-    <title>Register</title>
+    <title>LOGIN</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -67,27 +66,12 @@
             background-color: #d4edda;
             color: #155724;
         }
-
-        .login-link {
-            margin-top: 15px;
-            text-align: center;
-            font-size: 14px;
-        }
-
-        .login-link a {
-            color: #007bff;
-            text-decoration: none;
-        }
-
-        .login-link a:hover {
-            text-decoration: underline;
-        }
         
     </style>
 </head>
 <body>
     <div class="container">
-        <h2>Signup</h2>
+        <h2>Login</h2>
 
         {% if message %}
             <div class="message {{ category }}">
@@ -101,10 +85,6 @@
             <input type="password" name="password" placeholder="Password" required>
             <button type="submit">Sign Up</button>
         </form>
-
-        <div class="login-link">
-            Already have an account? <a href="/login">Login</a>
-        </div>
     </div>
 </body>
 </html>
