--- a/templates/login.html
+++ b/templates/login.html
@@ -83,7 +83,7 @@
             <input type="text" name="username" placeholder="Username" required>
             <input type="email" name="email" placeholder="Email" required>
             <input type="password" name="password" placeholder="Password" required>
-            <button type="submit">Sign Up</button>
+            <button type="submit">Log in</button>
         </form>
     </div>
 </body>
