--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,9 @@
+
 {% extends "base.html" %}
+{% block content %}
+<p>This is the home page.</p>
+{% endblock %}
+
 
 {% block content %}
 <!-- Search Form -->
