Added the reading list functionality

--- a/templates/logo.html
+++ b/templates/logo.html
@@ -42,7 +42,7 @@
 
   <script>
     setTimeout(() => {
-      window.location.href = "/login";
+      window.location.href = "/register";
     }, 7000);
   </script>
 </head>
