--- a/templates/bookpage.html
+++ b/templates/bookpage.html
@@ -97,8 +97,20 @@
         </div>
 
         <div class="actions">
-            <button>Add to Wishlist</button>
-            <button>Mark as Read</button>
+            <!-- <button>Add to Wishlist</button>-->
+            <!--<button>Mark as Read</button>-->
+            <form method="POST" action="/add_to_list" style="display:inline;">
+                <input type="hidden" name="bookname" value="{{ book['bookname'] }}">
+                <input type="hidden" name="list_type" value="wishlist">
+                <button type="submit" class="btn btn-outline-primary btn-sm">Add to Wishlist</button>
+            </form>
+            
+            <!-- Mark as Read -->
+            <form method="POST" action="/add_to_list" style="display:inline;">
+                <input type="hidden" name="bookname" value="{{ book['bookname'] }}">
+                <input type="hidden" name="list_type" value="read">
+                <button type="submit" class="btn btn-outline-success btn-sm">Mark as Read</button>
+            </form>
         </div>
 
         <div class="star-rating" id="starRating">
