--- a/templates/base.html
+++ b/templates/base.html
@@ -7,12 +7,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <style>
         :root {
-            --primary-color: #e3cb18;
-            --secondary-color: #c9b30f;
+            --primary-color: #be6674;
+            --secondary-color: #be6674;
             --accent-color: #4fc3f7;
             --text-color: #272525;
-            --light-bg: #f8f9fa;
-            --white: #ffffff;
+            --light-bg: #f7f2f0;
+            --white: #f3e0d1;
             --shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
         
