--- a/templates/home.html
+++ b/templates/home.html
@@ -67,7 +67,7 @@
         <a href="{{ url_for('logout') }}">
             <button style="
                 padding: 8px 16px;
-                background-color: #dc3545;
+                background-color: #741c28;
                 color: white;
                 border: none;
                 border-radius: 4px;
@@ -168,7 +168,7 @@
 <!-- Recommendations Button -->
 <div style="text-align: center; margin-bottom: 20px;">
     <a href="/recommendations" 
-       style="padding: 10px 20px; background-color: #1db522; color: white; 
+       style="padding: 10px 20px; background-color: #db6551; color: white; 
               border-radius: 5px; text-decoration: none; font-weight: bold;">
         Recommendations
     </a>
