revamped frontend, open to changes

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
     <style>
         :root {
             --primary-color: #be6674;
-            --secondary-color: #be6674;
+            --secondary-color: #bc5466;
             --accent-color: #4fc3f7;
             --text-color: #272525;
             --light-bg: #f7f2f0;
