--- a/templates/base2.html
+++ b/templates/base2.html
@@ -11,7 +11,7 @@
             --highlight: #facc15;
             --bg: #f7f2f0;
             --text: #111827;
-            --white: #daa38f;
+            --white: #be6674;
         }
 
         * {
