--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -50,7 +50,7 @@
     {% if books %}
     <ul>
         {% for book in books %}
-        <li>{{ book[1] }} by {{ book[2] }} (Genre: {{ book[3] }})</li>
+        <li>{{ book[1] }} , {{ book[3] }} (Genre: {{ book[2] }})</li>
         {% endfor %}
     </ul>
     {% else %}
