--- a/templates/bookpage.html
+++ b/templates/bookpage.html
@@ -111,6 +111,9 @@
                 <input type="hidden" name="list_type" value="read">
                 <button type="submit" class="btn btn-outline-success btn-sm">Mark as Read</button>
             </form>
+
+                <!-- View Ratings button -->
+                <a href="/view_ratings/{{ book['bookname'] }}" class="btn-3d">View Ratings</a>
         </div>
 
         <div class="star-rating" id="starRating">
