--- a/templates/profile.html
+++ b/templates/profile.html
@@ -49,6 +49,13 @@
             {% endif %}
         </div>
     </div>
+    <div style="text-align: center; margin-bottom: 20px;">
+    <a href="/top_picks" 
+       style="padding: 10px 20px; background-color: #669ae8; color: #ffffff; 
+              border-radius: 5px; text-decoration: none; font-weight: bold;">
+        Top Picks
+    </a>
+</div>
 </div>
 
 <style>
