--- a/templates/search.html
+++ b/templates/search.html
@@ -1,3 +1,4 @@
+<!-- searcht.html -->
 {% extends "base2.html" %}
 {% block content %}
 <div style="max-width: 600px; margin: 40px auto; padding: 20px; background: #f9f9f9; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
