--- a/templates/home.html
+++ b/templates/home.html
@@ -84,11 +84,11 @@
             </button>
         </a>
 
-        <a href="{{ url_for('logout') }}">
-            <button style="padding: 8px 16px; background-color: #9c2737; color: white;
-                border: none; border-radius: 4px; cursor: pointer;">
-                Logout
-            </button>
+        <a href='\search'
+            style="padding: 3px 16px; background-color: #669ae8; color: #ffffff;
+                border: 1px solid #cbd8ec; border-radius: 4px; text-decoration: none ;cursor: pointer;">
+                Users
+            
         </a>
     </div>
 </nav>
