--- a/templates/profile.html
+++ b/templates/profile.html
@@ -52,8 +52,13 @@
     <div style="text-align: center; margin-bottom: 20px;">
     <a href="/top_picks" 
        style="padding: 10px 20px; background-color: #669ae8; color: #ffffff; 
-              border-radius: 5px; text-decoration: none; font-weight: bold;">
+              border-radius: 5px; text-decoration: none; font-weight: bold; margin-right: 20px;">
         Top Picks
+    </a>
+    <a href="{{ url_for('logout') }}"
+        style="padding: 10px 20px; background-color: #9c2737; color: white;
+            border-radius: 5px; text-decoration: none; font-weight: bold; cursor: pointer;">
+        Logout
     </a>
 </div>
 </div>
